05_kubernetes/004_kubernetes_namespace/02_LAB/labs/lab04-network/zones.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-b                   # โซนของทีม b
  labels:
    team: b                      # label ที่เราตั้งเอง
